// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions > index > bundle addBundle should work 1`] = `
Object {
  "type": "add bundle",
}
`;

exports[`actions > index > bundle deleteBundle should work 1`] = `
Array [
  Object {
    "payload": "1",
    "type": "delete bundle",
  },
  Object {
    "payload": Object {
      "options": Object {
        "method": "delete",
      },
      "url": "/api/bundle/1",
    },
    "type": "fetch",
  },
]
`;

exports[`actions > index > bundle deleteBundle should work 2`] = `
Array [
  Object {
    "payload": "1",
    "type": "delete bundle",
  },
  Array [
    Object {
      "payload": Object {
        "options": Object {
          "method": "delete",
        },
        "url": "/api/bundle/1",
      },
      "type": "increment outstanding fetches",
    },
    Promise {},
  ],
]
`;

exports[`actions > index > bundle deleteBundle should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "method": "delete",
      },
      "url": "/api/bundle/1",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > index > bundle saveBundle should work 1`] = `
Array [
  Object {
    "payload": Object {
      "_id": "1",
      "accessGroup": "accessGroupName",
      "centerLat": 38.90124,
      "centerLon": -77.015615,
      "createdAt": "2017-11-08T12:30:50.133Z",
      "createdBy": "person@gmail.com",
      "errorCode": "",
      "feeds": Array [],
      "name": "Mock Bundle",
      "nonce": "12345",
      "regionId": "1",
      "serviceEnd": "2018-09-28",
      "serviceStart": "2018-09-27",
      "status": "DONE",
      "totalFeeds": 0,
      "updatedAt": "2017-11-08T12:31:19.602Z",
      "updatedBy": "person@gmail.com",
    },
    "type": "set bundle",
  },
  Object {
    "payload": Object {
      "next": [Function],
      "options": Object {
        "body": Object {
          "_id": "1",
          "accessGroup": "accessGroupName",
          "centerLat": 38.90124,
          "centerLon": -77.015615,
          "createdAt": "2017-11-08T12:30:50.133Z",
          "createdBy": "person@gmail.com",
          "errorCode": "",
          "feeds": Array [],
          "name": "Mock Bundle",
          "nonce": "12345",
          "regionId": "1",
          "serviceEnd": "2018-09-28",
          "serviceStart": "2018-09-27",
          "status": "DONE",
          "totalFeeds": 0,
          "updatedAt": "2017-11-08T12:31:19.602Z",
          "updatedBy": "person@gmail.com",
        },
        "method": "put",
      },
      "url": "/api/bundle/1",
    },
    "type": "fetch",
  },
]
`;

exports[`actions > index > bundle saveBundle should work 2`] = `
Array [
  Object {
    "payload": Object {
      "_id": "1",
      "accessGroup": "accessGroupName",
      "centerLat": 38.90124,
      "centerLon": -77.015615,
      "createdAt": "2017-11-08T12:30:50.133Z",
      "createdBy": "person@gmail.com",
      "errorCode": "",
      "feeds": Array [],
      "name": "Mock Bundle",
      "nonce": "12345",
      "regionId": "1",
      "serviceEnd": "2018-09-28",
      "serviceStart": "2018-09-27",
      "status": "DONE",
      "totalFeeds": 0,
      "updatedAt": "2017-11-08T12:31:19.602Z",
      "updatedBy": "person@gmail.com",
    },
    "type": "set bundle",
  },
  Array [
    Object {
      "payload": Object {
        "options": Object {
          "body": Object {
            "_id": "1",
            "accessGroup": "accessGroupName",
            "centerLat": 38.90124,
            "centerLon": -77.015615,
            "createdAt": "2017-11-08T12:30:50.133Z",
            "createdBy": "person@gmail.com",
            "errorCode": "",
            "feeds": Array [],
            "name": "Mock Bundle",
            "nonce": "12345",
            "regionId": "1",
            "serviceEnd": "2018-09-28",
            "serviceStart": "2018-09-27",
            "status": "DONE",
            "totalFeeds": 0,
            "updatedAt": "2017-11-08T12:31:19.602Z",
            "updatedBy": "person@gmail.com",
          },
          "method": "put",
        },
        "url": "/api/bundle/1",
      },
      "type": "increment outstanding fetches",
    },
    Promise {},
  ],
]
`;

exports[`actions > index > bundle saveBundle should work 3`] = `
Array [
  Object {
    "payload": Object {
      "options": Object {
        "body": Object {
          "_id": "1",
          "accessGroup": "accessGroupName",
          "centerLat": 38.90124,
          "centerLon": -77.015615,
          "createdAt": "2017-11-08T12:30:50.133Z",
          "createdBy": "person@gmail.com",
          "errorCode": "",
          "feeds": Array [],
          "name": "Mock Bundle",
          "nonce": "12345",
          "regionId": "1",
          "serviceEnd": "2018-09-28",
          "serviceStart": "2018-09-27",
          "status": "DONE",
          "totalFeeds": 0,
          "updatedAt": "2017-11-08T12:31:19.602Z",
          "updatedBy": "person@gmail.com",
        },
        "method": "put",
      },
      "url": "/api/bundle/1",
    },
    "type": "increment outstanding fetches",
  },
  Promise {},
]
`;

exports[`actions > index > bundle setBundle should work 1`] = `
Object {
  "type": "set bundle",
}
`;

exports[`actions > index > feed setFeeds should work 1`] = `
Object {
  "type": "set feeds",
}
`;

exports[`actions > index > login / logout login should work 1`] = `
Object {
  "type": "log in",
}
`;

exports[`actions > index > login / logout logout should work 1`] = `
Array [
  [Function],
  Object {
    "payload": Object {
      "args": Array [
        "/",
      ],
      "method": "push",
    },
    "type": "@@router/CALL_HISTORY_METHOD",
  },
]
`;

exports[`actions > index > user setActiveTrips should work 1`] = `
Object {
  "type": "set active trips",
}
`;

exports[`actions > index > user setUser should work 1`] = `
Object {
  "type": "set user",
}
`;
